<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.6.2</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>dev.struchkov.bot.gitlab</groupId>
    <artifactId>gitlab-bot</artifactId>
    <version>3.1.0</version>
    <packaging>pom</packaging>

    <modules>
        <module>bot-context</module>
        <module>telegram-bot</module>
        <module>gitlab-sdk</module>
        <module>bot-core</module>
        <module>gitlab-app</module>
        <module>bot-data</module>
    </modules>

    <name>Parent GitLab Notify Bot</name>
    <description>Notifications about gitlab events in Telegram</description>
    <url>https://github.com/uPagge/gitlab-notification</url>
    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
        </license>
    </licenses>
    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/uPagge/gitlab-notification/issues</url>
    </issueManagement>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <gitlab.core.version>3.1.0</gitlab.core.version>
        <gitlab.app.version>3.1.0</gitlab.app.version>
        <gitlab.sdk.version>3.1.0</gitlab.sdk.version>
        <gitlab.context.version>3.1.0</gitlab.context.version>
        <gitlab.data.version>3.1.0</gitlab.data.version>
        <gitlab.telegram.version>3.1.0</gitlab.telegram.version>
        <gitlab.core.version>3.1.0</gitlab.core.version>

        <haiti.ver>0.0.5</haiti.ver>
        <godfather.telegram.core.version>0.0.2</godfather.telegram.core.version>

        <javax.persistance.version>2.2</javax.persistance.version>

        <hibernate.jpa-modelgen.version>6.0.0.Alpha5</hibernate.jpa-modelgen.version>
        <google.guava.version>31.0.1-jre</google.guava.version>
        <jackson.databind.version>2.13.1</jackson.databind.version>
        <jackson.datatype.jsr310.version>2.13.1</jackson.datatype.jsr310.version>

        <plugin.maven.compiler.ver>3.9.0</plugin.maven.compiler.ver>
        <plugin.nexus.staging.ver>1.6.8</plugin.nexus.staging.ver>
        <plugin.maven.source.ver>3.2.1</plugin.maven.source.ver>
        <plugin.maven.javadoc.ver>3.3.1</plugin.maven.javadoc.ver>
        <plugin.maven.gpg.ver>3.0.1</plugin.maven.gpg.ver>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>dev.struchkov.haiti</groupId>
                <artifactId>haiti-bom</artifactId>
                <version>${haiti.ver}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- модули проекта -->
            <dependency>
                <groupId>dev.struchkov.bot.gitlab</groupId>
                <artifactId>bot-core</artifactId>
                <version>${gitlab.core.version}</version>
            </dependency>

            <dependency>
                <groupId>dev.struchkov.bot.gitlab</groupId>
                <artifactId>gitlab-core</artifactId>
                <version>${gitlab.core.version}</version>
            </dependency>

            <dependency>
                <groupId>dev.struchkov.bot.gitlab</groupId>
                <artifactId>telegram-bot</artifactId>
                <version>${gitlab.telegram.version}</version>
            </dependency>

            <dependency>
                <groupId>dev.struchkov.bot.gitlab</groupId>
                <artifactId>bot-context</artifactId>
                <version>${gitlab.context.version}</version>
            </dependency>

            <dependency>
                <groupId>dev.struchkov.bot.gitlab</groupId>
                <artifactId>gitlab-sdk</artifactId>
                <version>${gitlab.sdk.version}</version>
            </dependency>

            <dependency>
                <groupId>dev.struchkov.bot.gitlab</groupId>
                <artifactId>bot-data</artifactId>
                <version>${gitlab.data.version}</version>
            </dependency>

            <!-- /модули проекта -->
            <!-- haiti -->

            <dependency>
                <groupId>dev.struchkov.godfather</groupId>
                <artifactId>telegram-core</artifactId>
                <version>${godfather.telegram.core.version}</version>
            </dependency>

            <!-- /SADTECH -->
            <!-- БД -->

            <dependency>
                <groupId>org.hibernate.orm</groupId>
                <artifactId>hibernate-jpamodelgen</artifactId>
                <version>${hibernate.jpa-modelgen.version}</version>
            </dependency>

            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>${postgresql.version}</version>
            </dependency>

            <dependency>
                <groupId>org.liquibase</groupId>
                <artifactId>liquibase-core</artifactId>
                <version>${liquibase.version}</version>
            </dependency>

            <dependency>
                <groupId>javax.persistence</groupId>
                <artifactId>javax.persistence-api</artifactId>
                <version>${javax.persistance.version}</version>
            </dependency>

            <!-- /БД -->
            <!-- утилиты -->

            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${google.guava.version}</version>
            </dependency>

            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>

            <!-- /утилиты -->
            <!-- spring -->

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-web</artifactId>
                <version>2.2.4.RELEASE</version>
                <exclusions>
                    <exclusion>
                        <groupId>ch.qos.logback</groupId>
                        <artifactId>logback-classic</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

            <!-- /spring -->
            <!-- http -->

            <dependency>
                <groupId>com.squareup.okhttp3</groupId>
                <artifactId>okhttp</artifactId>
                <version>${okhttp3.version}</version>
            </dependency>

            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.databind.version}</version>
            </dependency>

            <dependency>
                <groupId>com.fasterxml.jackson.datatype</groupId>
                <artifactId>jackson-datatype-jsr310</artifactId>
                <version>${jackson.datatype.jsr310.version}</version>
            </dependency>
            <!-- /http -->

        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.9.0</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <developers>
        <developer>
            <id>uPagge</id>
            <name>Struchkov Mark</name>
            <email>mark@struchkov.dev</email>
            <url>https://mark.struchkov.dev</url>
        </developer>
    </developers>

</project>
